work on backend misses and frontend mess now

--- a/annotation_ui/Dockerfile
+++ b/annotation_ui/Dockerfile
@@ -1,5 +1,5 @@
 # Update to Node 18
-FROM node:18
+FROM node:18-alpine
 
 # Set the working directory in the container
 WORKDIR /app
@@ -7,20 +7,15 @@ WORKDIR /app
 # Copy package.json and package-lock.json
 COPY package*.json ./
 
-# Add xdg-utils for Linux systems
-RUN apt-get update && apt-get install -y xdg-utils
-
 # Install dependencies
 RUN npm install
+RUN npm install axios
 
 # Copy the rest of the application code
 COPY . .
 
-# Install nodemon globally for development
-RUN npm install -g nodemon
+# Expose the React port
+EXPOSE 3721
 
-# Expose both the React and Express ports
-EXPOSE 3721 3722
-
-# Define the command to run both servers
-CMD ["npm", "run", "dev"]
+# Define the command to run the React application
+CMD ["npm", "start"]
