--- a/annotation-backend/docker-compose.yml
+++ b/annotation-backend/docker-compose.yml
@@ -6,11 +6,12 @@ services:
     ports:
       - "8000:8000"
     volumes:
+      - ./app:/app/app
       - ./data:/app/data
     environment:
       - SQLALCHEMY_DATABASE_URL=sqlite:///app/data/app.db
       - FIRST_ADMIN_EMAIL=admin@example.com
-      - FIRST_ADMIN_PASSWORD=admin123
+      - FIRST_ADMIN_PASSWORD=admin
       - SECRET_KEY=your-secret-key-here
       - ALGORITHM=HS256
       - ACCESS_TOKEN_EXPIRE_MINUTES=30
