--- a/annotation_ui/package.json
+++ b/annotation_ui/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.9.0",
     "express": "^4.21.1",
     "fs": "^0.0.1-security",
     "moment": "^2.30.1",
@@ -26,7 +27,6 @@
     "server": "node server.js",
     "dev": "concurrently \"npm run start\" \"npm run server\""
   },
-  "proxy": "http://localhost:3722",
   "eslintConfig": {
     "extends": [
       "react-app",
