--- a/conversion_tools/requirements.txt
+++ b/conversion_tools/requirements.txt
@@ -1,4 +1,8 @@
 # Requirements for CSV/Excel to Batch JSON Conversion Tools
-pandas>=1.5.0
-requests>=2.28.0
-click>=8.0.0 
+requests
+pandas
+click
+openpyxl>=3.0.0
+pydantic>=1.10.0
+pyyaml>=6.0
+tqdm>=4.64.0 
