--- a/annotation-backend/requirements.txt
+++ b/annotation-backend/requirements.txt
@@ -11,3 +11,7 @@ alembic==1.13.1
 pandas==2.2.0
 bcrypt==4.0.1
 email-validator==2.1.0
+# Statistical computing dependencies for IAA metrics
+scipy==1.11.4
+scikit-learn==1.3.2
+numpy==1.24.4
