feat: implementa configuração dinâmica de CORS e acesso remoto
- Adiciona configuração dinâmica de CORS origins baseada em SERVER_IP
- Actualiza docker-compose.yml para suportar variáveis de ambiente
- Simplifica geração de emails (remove prefixo "anota")
- Muda password default para "password" (testing)
- Cria templates .env.example com documentação completa
- Adiciona diagramas Mermaid explicativos ao README
- Documenta workflow completo de deployment local/remoto
- Fix: renomeia env.example para .env.example (consistência)

Permite acesso remoto com uma única variável: SERVER_IP=IP_SERVIDOR

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,9 @@ services:
     environment:
       - DATABASE_URL=sqlite:///./data/app.db
       - SECRET_KEY=your-secret-key
-      - CORS_ORIGINS=["http://localhost:3721"]
+      - SERVER_IP=${SERVER_IP:-localhost}
+      - FRONTEND_PORT=${FRONTEND_PORT:-3721}
+      - CORS_ORIGINS=["http://localhost:3721","http://127.0.0.1:3721","http://${SERVER_IP:-localhost}:${FRONTEND_PORT:-3721}"]
     volumes:
       - ./annotation-backend:/app
       - ./data:/app/data
@@ -16,7 +18,7 @@ services:
     ports:
       - "3721:3721"
     environment:
-      - REACT_APP_API_URL=http://localhost:8000
+      - REACT_APP_API_URL=http://${SERVER_IP:-localhost}:8000
     volumes:
       - ./annotation_ui:/app
       - /app/node_modules
