feat: Implementa exportação de dados e refina UI/UX do anotador
Este commit introduz uma funcionalidade crítica de exportação de dados para administradores e uma série de melhorias significativas na interface e experiência de utilização para o anotador, resolvendo vários problemas de layout, visibilidade e consistência.

### Funcionalidade Principal: Exportação de Anotações (Admin)

*   **Backend:**
    *   Adicionado um novo `endpoint` na API de admin (`/api/v1/admin/chat-rooms/{chat_room_id}/export`) que permite o download de todos os dados de uma `chat room`.
    *   Implementada a lógica em `crud.py` para agregar todas as `messages` (turns) e as respetivas `annotations` de todos os utilizadores num único ficheiro JSON estruturado.
*   **Frontend:**
    *   Na `AdminProjectPage`, foi adicionado um botão "Export to JSON" que invoca uma nova função na `api.js` para despoletar o download no browser.

### Melhorias na Interface do Anotador (UI/UX)

*   **`AnnotatorDashboard`:** A vista foi alinhada com o `AdminDashboard` para maior consistência visual, reutilizando `components` e `styling` existentes.
*   **`AnnotatorProjectPage`:**
    *   A apresentação dos projetos foi convertida de um layout de `cards` para uma `table`, permitindo uma visualização mais clara e organizada do progresso.
    *   Adicionado o botão "Back to Dashboard" para facilitar a navegação.
*   **`AnnotatorChatRoomPage`:**
    *   **Layout:** Corrigido o desequilíbrio no layout `grid`, permitindo que a secção de `messages` e a `sidebar` de `threads` se expandam de forma harmoniosa e ocupem o espaço vertical de forma mais eficiente.
    *   **Header Fixo:** O `header` da página ("Chat Disentanglement Annotation") foi tornado significativamente mais compacto em altura, e o `gap` visual entre este e o `header` principal da aplicação foi removido, otimizando o espaço vertical e eliminando distrações.
    *   **Cores de Threads:** O sistema de cores foi completamente revisto para garantir visibilidad

--- a/conversion_tools/config.yaml
+++ b/conversion_tools/config.yaml
@@ -4,10 +4,10 @@ api:
   base_url: http://localhost:8000
 import:
   auto_confirm: false
-  default_user_password: ChangeMe123!
+  default_user_password: password
   email_domain: research.pt
 project:
-  last_used_project_id: 20
+  last_used_project_id: 22
   mode: select_existing
   new_project:
     description: Project created from Excel import tool
