--- a/annotation_ui/package.json
+++ b/annotation_ui/package.json
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@playwright/test": "^1.53.2",
     "concurrently": "^7.6.0"
   }
 }
